Удаление станции "Веселые мешки"; Правки текста сообщений; fix проблемы с определением путей к файлам ресурсов;